--- a/src/style/_Modal.scss
+++ b/src/style/_Modal.scss
@@ -9,6 +9,10 @@
     position: relative;
     animation: show-modal 0.6s;
 
+    .theme-colourful & {
+        background: linear-gradient(yellow, orange);
+    }
+
     p:first-child {
         margin-top: 0px;
     }
@@ -18,7 +22,7 @@
         text-align: center;
     }
 
-    input {
+    input:not([type=radio]) {
         display: block;
         width: calc(100% - 2*4px - 2*1px);
         font-size: 1.2em;
@@ -47,8 +51,6 @@
         position: absolute;
         top: -8px;
         right: -8px;
-        color: white;
-        font-weight: bold;
         background: red;
         border-radius: 100%;
         display: inline-block;
@@ -58,6 +60,7 @@
         box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.1);
         opacity: 0.8;
         cursor: pointer;
+        overflow: hidden;
 
         &:hover {
             box-shadow: 0px 0px 5px 8px rgba(255, 255, 255, 0.2);
